[gd_scene load_steps=31 format=3 uid="uid://0o5kde1rrb40"]

[ext_resource type="Script" path="res://animation_canvas.gd" id="1_7lcxe"]
[ext_resource type="Texture2D" uid="uid://blocsux4jehqm" path="res://Backgrounds/space_bg.png" id="1_onj4f"]
[ext_resource type="Texture2D" uid="uid://i87gehbfiwku" path="res://Backgrounds/moon.png" id="2_fedba"]
[ext_resource type="Texture2D" uid="uid://b01dlk154begj" path="res://Backgrounds/Earth_new/earth1.png" id="3_cv5hi"]
[ext_resource type="Texture2D" uid="uid://qe06ylijto46" path="res://Backgrounds/Earth_new/earth2.png" id="4_lk7fv"]
[ext_resource type="Texture2D" uid="uid://d12pltn3420wl" path="res://Backgrounds/Earth_new/earth3.png" id="5_2w8ba"]
[ext_resource type="Texture2D" uid="uid://btdnfwr3wk331" path="res://Backgrounds/Earth_new/earth4.png" id="6_j1qdr"]
[ext_resource type="Texture2D" uid="uid://by2j6gbu05hs6" path="res://Backgrounds/Earth_new/earth5.png" id="7_xn7xb"]
[ext_resource type="Texture2D" uid="uid://46lrx3wfgxy7" path="res://Backgrounds/Earth_new/earth6.png" id="8_ff5eu"]
[ext_resource type="Texture2D" uid="uid://chevjqf1x1cfd" path="res://Backgrounds/Earth_new/earth7.png" id="9_7jgee"]
[ext_resource type="Texture2D" uid="uid://qnni8xmgrs7n" path="res://Backgrounds/Earth_new/earth8.png" id="10_461u4"]
[ext_resource type="Texture2D" uid="uid://duodv43654pra" path="res://Backgrounds/Earth_new/earth9.png" id="11_558uv"]
[ext_resource type="Texture2D" uid="uid://cu6qrhsjxvdd6" path="res://Backgrounds/Earth_new/earth10.png" id="12_08u5n"]
[ext_resource type="Texture2D" uid="uid://10p5mrkgxgxd" path="res://Backgrounds/Earth_new/earth11.png" id="13_a5qoi"]
[ext_resource type="Texture2D" uid="uid://b0hmfnf66wint" path="res://Backgrounds/Earth_new/earth12.png" id="14_koe04"]
[ext_resource type="Texture2D" uid="uid://c8niduhvvjwaq" path="res://Backgrounds/Earth_new/earth13.png" id="15_5d68t"]
[ext_resource type="Texture2D" uid="uid://wo7q8vuf1qh6" path="res://Backgrounds/Earth_new/earth14.png" id="16_c18he"]
[ext_resource type="Texture2D" uid="uid://djnaabxpwdaxg" path="res://Backgrounds/Earth_new/earth15.png" id="17_wy0jb"]
[ext_resource type="Texture2D" uid="uid://c7kqrnqsvt6c2" path="res://Backgrounds/Earth_new/earth16.png" id="18_raih1"]
[ext_resource type="Texture2D" uid="uid://lpra1frj6pft" path="res://Backgrounds/Earth_new/earth17.png" id="19_yv0qq"]
[ext_resource type="Texture2D" uid="uid://cfff6ifo5reup" path="res://Backgrounds/Earth_new/earth18.png" id="20_vm3ex"]
[ext_resource type="Texture2D" uid="uid://b44uh46b7845d" path="res://Backgrounds/Earth_new/earth19.png" id="21_j34dw"]
[ext_resource type="Texture2D" uid="uid://ddfoblpct3pb6" path="res://Backgrounds/Earth_new/earth20.png" id="22_jey1w"]
[ext_resource type="Texture2D" uid="uid://cnw0c3c8jsglu" path="res://Backgrounds/Earth_new/earth21.png" id="23_uekol"]
[ext_resource type="Texture2D" uid="uid://yitqt2phrjjl" path="res://Backgrounds/Earth_new/earth22.png" id="24_neilw"]
[ext_resource type="Texture2D" uid="uid://qfai63toyku2" path="res://Backgrounds/Earth_new/earth26.png" id="28_exo8g"]
[ext_resource type="Texture2D" uid="uid://ddsp1g7w6vniu" path="res://Backgrounds/SpecialPNG_type0/bank.png" id="28_g8rig"]
[ext_resource type="PackedScene" uid="uid://cyxesh3mr4y0" path="res://building.tscn" id="28_wfqkg"]
[ext_resource type="Texture2D" uid="uid://37lw7nl7st5r" path="res://Backgrounds/SpecialPNG_type0/coal.png" id="29_cl44v"]

[sub_resource type="SpriteFrames" id="SpriteFrames_3rxe2"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_cv5hi")
}, {
"duration": 1.0,
"texture": ExtResource("4_lk7fv")
}, {
"duration": 1.0,
"texture": ExtResource("5_2w8ba")
}, {
"duration": 1.0,
"texture": ExtResource("6_j1qdr")
}, {
"duration": 1.0,
"texture": ExtResource("7_xn7xb")
}, {
"duration": 1.0,
"texture": ExtResource("8_ff5eu")
}, {
"duration": 1.0,
"texture": ExtResource("9_7jgee")
}, {
"duration": 1.0,
"texture": ExtResource("10_461u4")
}, {
"duration": 1.0,
"texture": ExtResource("11_558uv")
}, {
"duration": 1.0,
"texture": ExtResource("12_08u5n")
}, {
"duration": 1.0,
"texture": ExtResource("13_a5qoi")
}, {
"duration": 1.0,
"texture": ExtResource("14_koe04")
}, {
"duration": 1.0,
"texture": ExtResource("15_5d68t")
}, {
"duration": 1.0,
"texture": ExtResource("16_c18he")
}, {
"duration": 1.0,
"texture": ExtResource("17_wy0jb")
}, {
"duration": 1.0,
"texture": ExtResource("18_raih1")
}, {
"duration": 1.0,
"texture": ExtResource("19_yv0qq")
}, {
"duration": 1.0,
"texture": ExtResource("20_vm3ex")
}, {
"duration": 1.0,
"texture": ExtResource("21_j34dw")
}, {
"duration": 1.0,
"texture": ExtResource("22_jey1w")
}, {
"duration": 1.0,
"texture": ExtResource("23_uekol")
}, {
"duration": 1.0,
"texture": ExtResource("24_neilw")
}, {
"duration": 1.0,
"texture": ExtResource("28_exo8g")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[node name="Animation_Canvas" type="CanvasLayer"]
script = ExtResource("1_7lcxe")

[node name="Space" type="Sprite2D" parent="."]
position = Vector2(818, 403)
scale = Vector2(0.85, 0.85)
texture = ExtResource("1_onj4f")

[node name="Moon" type="Sprite2D" parent="."]
z_index = 1
position = Vector2(1200, 415)
scale = Vector2(0.2, 0.2)
texture = ExtResource("2_fedba")

[node name="Timer" type="Timer" parent="Moon"]
wait_time = 25.0
autostart = true

[node name="Earth" type="AnimatedSprite2D" parent="."]
position = Vector2(815, 419)
scale = Vector2(0.85, 0.85)
sprite_frames = SubResource("SpriteFrames_3rxe2")
frame_progress = 0.194582
speed_scale = 2.0

[node name="Shadow" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Shadow"]
polygon = PackedVector2Array(577, 123, 461, 252, 470, 447, 534, 612, 645, 784, 626, 742, 581, 652, 552, 586, 537, 529, 519, 412, 522, 344, 532, 268, 554, 168)

[node name="Light" type="Area2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Light"]
polygon = PackedVector2Array(718, 115, 743, 155, 782, 177, 856, 239, 898, 339, 907, 437, 899, 561, 831, 691, 760, 748, 720, 774, 781, 747, 854, 710, 899, 654, 940, 504, 920, 423, 906, 289, 852, 214, 760, 140)

[node name="Building" parent="." instance=ExtResource("28_wfqkg")]
r = 270.0
x0 = 715
y0 = 700
sprite_texture = ExtResource("28_g8rig")

[node name="Building2" parent="." instance=ExtResource("28_wfqkg")]
r = 270.0
x0 = 650
y0 = 350
sprite_texture = ExtResource("29_cl44v")

[connection signal="timeout" from="Moon/Timer" to="." method="_on_timer_timeout"]
[connection signal="area_entered" from="Shadow" to="." method="_on_shadow_area_entered"]
[connection signal="area_entered" from="Light" to="." method="_on_light_area_entered"]
